--- a/index.html
+++ b/index.html
@@ -6,5 +6,21 @@
   </head>
   <body>
     <h1>Hello World!</h1>
+    <div>
+      <div>
+        <input type="password" id="password" name="password"/>
+      </div>
+      <div>
+        <input type="text" id="key" name="key"/>
+      </div>
+      <div id="result">
+      </div>
+    </div>
   </body>
+  <script>
+    // You can also require other files to run in this process
+    require('./jquery.min.js')
+    require('./md5.js')
+    require('./renderer.js')
+  </script>
 </html>
