--- a/index.html
+++ b/index.html
@@ -15,17 +15,22 @@
       input {
         border: 0;
         outline: 0;
-        border-bottom: 1px solid #1B924A;
+        border-bottom: 1px solid #15733c;
         border-radius: 1px;
-        font-size: 30px;
+        height: 30px;
+        font-size: 25px;
         margin-bottom: 10px;
+        padding: 2px 4px;
         background-color: transparent;
-        color: green;
+        color: #15733c;
       }
       ::-webkit-input-placeholder { /* Chrome */
-        color: green;
+        color: #639e63;
+        font-size: 25px;
+        padding: 2px 4px;
       }
       #result {
+        color: #d4d492;
         cursor: pointer;
         font-size: 25px;
       }
